Fix med main nav horizontal scroll

--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -73,11 +73,7 @@
       border: 0;
 
       @media only screen and (min-width: $navigation-threshold) {
-        width: $site-max-width;
-      }
-
-      @media only screen and (max-width : $breakpoint-medium) {
-        width: $breakpoint-medium;
+        max-width: $site-max-width;
       }
 
       span {
